--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
     "nodemon": "^2.0.12"
