--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --watchAll",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "npm run start-redis && nodemon index.js",
+    "start-redis": "redis-server --daemonize yes"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "redis": "^3.1.2"
   }
 }
