--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watchAll",
     "start": "node index.js",
     "dev": "npm run start-redis && nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
     "start-redis": "redis-server --daemonize yes"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/viettran1010/cryptochain#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^27.0.6"
   },
   "dependencies": {
