--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hex-to-binary": "^1.0.1",
     "nodemon": "^2.0.12",
     "redis": "^3.1.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.2"
   }
 }
