--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "dev": "npm run start-redis && nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
-    "start-redis": "redis-server --daemonize yes"
+    "start-redis": "redis-server --daemonize yes",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "jest": {
     "testEnvironment": "node"
@@ -26,7 +27,8 @@
   "homepage": "https://github.com/viettran1010/cryptochain#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
