--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
