--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemon": "^2.0.12",
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "redis": "^3.1.2",
